--- a/app/src/components/footer/Footer.astro
+++ b/app/src/components/footer/Footer.astro
@@ -1,3 +1,19 @@
 ---
 interface Props {}
+
+const year = new Date().getFullYear();
 ---
+
+<footer>
+  Copyright &copy; {year} deminearchiver
+</footer>
+
+<style>
+  footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: 24px;
+  }
+</style>
