--- a/app/src/layouts/Page.astro
+++ b/app/src/layouts/Page.astro
@@ -7,6 +7,7 @@ import "../styles/reset.css";
 import "normalize.css";
 
 import "@fontsource-variable/roboto-flex/grad.css";
+import "@fontsource-variable/fira-code";
 ---
 
 <html lang="en">
