--- a/app/src/pages/404.astro
+++ b/app/src/pages/404.astro
@@ -1,5 +1,6 @@
 ---
 import { IconButton } from "../components/icon-button";
+import { ThemeSelect } from "../components/theme";
 import Page from "../layouts/Page.astro";
 
 import ArrowBackIcon from "~icons/material-symbols-rounded/arrow-back:outlined";
@@ -8,6 +9,11 @@ const pathname = Astro.url.pathname;
 ---
 
 <Page>
+  <header>
+    <ThemeSelect
+      client:only="solid-js"
+      type="medium" />
+  </header>
   <main>
     <div class="content">
       <h1 class="code">404</h1>
@@ -28,6 +34,18 @@ const pathname = Astro.url.pathname;
 </Page>
 
 <style>
+  header {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    height: 64px;
+
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+
   main {
     width: 100%;
     height: 100dvh;
