--- a/app/src/pages/index.astro
+++ b/app/src/pages/index.astro
@@ -1,15 +1,16 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import Card from "../components/Card.astro";
 import Page from "../layouts/Page.astro";
 import { Header } from "../components/header";
+import { Hero } from "../components/hero";
+import { Footer } from "../components/footer";
 ---
 
 <Page>
   <Header />
   <main>
-    Test
+    <Hero />
   </main>
+  <Footer></Footer>
 </Page>
 
 <style>
