--- a/app/src/pages/blog/[...slug].astro
+++ b/app/src/pages/blog/[...slug].astro
@@ -25,7 +25,35 @@ const { Content } = await post.render();
 ---
 <Page>
   <Header />
-  <Markdown>
-    <Content />
-  </Markdown>
+  <main>
+    <div class="content">
+      <h1>{post.data.title}</h1>
+      <Markdown>
+        <Content />
+      </Markdown>
+    </div>
+  </main>
 </Page>
+
+<style>
+  main {
+    max-width: 960px;
+    margin: 0 auto;
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    margin: 96px 48px;
+  }
+
+  h1 {
+    font-family: var(--text-display-medium-family);
+    font-size: var(--text-display-medium-size);
+    /* font-weight: var(--text-display-medium-weight); */
+    font-weight: 500;
+    line-height: var(--text-display-medium-line-height);
+    letter-spacing: var(--text-display-medium-letter-spacing);
+  }
+</style>
