--- a/app/src/pages/blog/index.astro
+++ b/app/src/pages/blog/index.astro
@@ -5,14 +5,18 @@ import { Footer } from "../../components/footer";
 import { getCollection } from "astro:content";
 import { Image } from "astro:assets";
 
-const posts = await getCollection("blog");
+import ImageIcon from "~icons/material-symbols-rounded/image:outlined&opticalSize=48";
+
+const posts = (await getCollection("blog"))
+  .sort(
+    (a, b) => a.data.createdAt.valueOf() - b.data.createdAt.valueOf(),
+  );
 
 ---
 
 <Page>
   <Header />
   <main>
-    <h1>Blog</h1>
     <ul class="posts">
       {
         posts.map(({ slug, data: post }) => {
@@ -24,7 +28,9 @@ const posts = await getCollection("blog");
                 <a
                   class="card"
                   href={postUrl}>
-                    <div class="cover"></div>
+                    <div class="cover">
+                      <ImageIcon width={48} height={48} />
+                    </div>
                     <div class="content">
                       <h3 class="title">{post.title}</h3>
                     </div>
@@ -110,8 +116,14 @@ const posts = await getCollection("blog");
   .cover {
     width: 100%;
     aspect-ratio: 16 / 9;
-    background-color: red;
+
+    display: grid;
+    place-items: center;
+    place-content: center;
+
+    background-color: var(--color-surface-container-highest);
     border-radius: 28px;
+    color: color-mix(in srgb, var(--color-on-surface-variant) 38%, transparent)
   }
   .content {
     display: flex;
