--- a/app/src/components/header/Header.astro
+++ b/app/src/components/header/Header.astro
@@ -138,7 +138,8 @@ interface Props {}
     background-color: var(--color-surface);
     transition: background-color 300ms var(--easing-standard);
 
-    z-index: 1;
+    z-index: 9999;
+    isolation: isolate
   }
 
   .leading {
