--- a/app/src/layouts/Page.astro
+++ b/app/src/layouts/Page.astro
@@ -2,7 +2,7 @@
 import { ViewTransitions } from "astro:transitions";
 import { Head } from "../components/head";
 
-import "../styles/theme/theme.css";
+import "../styles/theme/global.css";
 import "../styles/reset.css";
 import "normalize.css";
 
