--- a/app/src/components/markdown/Markdown.astro
+++ b/app/src/components/markdown/Markdown.astro
@@ -134,20 +134,19 @@
     background-color: var(--sl-color-bg-inline-code);
     margin-block: -0.125rem;
     padding: 0.125rem 0.375rem;
-    font-size: var(--sl-text-code-sm);
-  }
-  .markdown code {
-    letter-spacing: 0;
   }
 
   .markdown pre {
     tab-size: 2;
   }
 
-  /* .markdown pre {
+  .markdown pre {
     all: unset;
-    font-family: var(--__sl-font-mono);
-  } */
+  }
+
+  .markdown code {
+    letter-spacing: 0;
+  }
 
   .markdown blockquote:not(:where(.not-content *)) {
     border-inline-start: 1px solid var(--sl-color-gray-5);
