--- a/app/src/components/markdown/Markdown.astro
+++ b/app/src/components/markdown/Markdown.astro
@@ -21,7 +21,7 @@
     margin-top: 1rem;
   }
 
-  .markdown a[href] {
+  .markdown a[href]:not(:where(.not-content *)) {
     color: var(--color-primary);
 
     &:hover {
@@ -131,9 +131,14 @@
   }
 
   .markdown code:not(:where(.not-content *)) {
-    background-color: var(--sl-color-bg-inline-code);
-    margin-block: -0.125rem;
-    padding: 0.125rem 0.375rem;
+    background-color: var(--color-surface-container-high);
+    color: var(--color-on-surface-variant);
+    margin-block: -4px;
+    padding-block: 4px;
+    padding-inline: 8px;
+
+    border-radius: 8px;
+
   }
 
   .markdown pre {
