--- a/app/src/components/icon-button/IconButton.astro
+++ b/app/src/components/icon-button/IconButton.astro
@@ -43,6 +43,8 @@ const className = clsx(
     background-color: transparent;
     color: transparent;
 
+    cursor: pointer;
+
     transition: background-color 15ms linear;
 
     &.regular {
