--- a/app/src/components/header/Header.astro
+++ b/app/src/components/header/Header.astro
@@ -12,8 +12,10 @@ import SearchIcon from "~icons/material-symbols-rounded/search:outlined";
 import RssFeedIcon from "~icons/material-symbols-rounded/rss-feed:outlined";
 
 import { Logo } from "../logo";
-import { NavigationDrawer } from "../drawer";
+import { NavigationDrawer } from "../navigation";
 import { Search, SearchAnchor } from "../search";
+import { NavigationTab } from "../navigation";
+import { NAVIGATION_DESTINATIONS } from "../navigation/destinations";
 
 interface Props {}
 
@@ -23,28 +25,23 @@ interface Props {}
 <header id="header">
   <div class="leading">
     <NavigationDrawer
-      client:load
+      client:only="solid-js"
       class="drawer"
       url={Astro.url}
       destinations={[
-        {
-          href: "/",
-          icon: HomeIcon,
-          label: "Home",
-          selected: Astro.url.pathname === "/",
-        },
-        {
-          href: "/blog",
-          icon: FeedIcon,
-          label: "Blog",
-          selected: Astro.url.pathname.startsWith("/blog"),
-        },
-        {
-          href: "/about",
-          icon: InfoIcon,
-          label: "About",
-          selected: Astro.url.pathname === "/about",
-        },
+          {
+    icon: FeedIcon,
+    label: "Blog",
+    href: "/blog",
+    test: url => url.pathname.startsWith("/blog")
+  },
+  {
+    icon: InfoIcon,
+    label: "About",
+    href: "/about",
+    test: url => url.pathname.startsWith("/about")
+
+  },
       ]}>
         <IconButton>
           <MenuIcon />
@@ -56,24 +53,13 @@ interface Props {}
   </div>
   <nav>
     <ul>
-      <li>
-        <NavLink href="/">
-          <HomeIcon />
-          <span>Home</span>
-        </NavLink>
-      </li>
-      <li>
-        <NavLink href="/blog" selected={url => url.pathname.startsWith("/blog")}>
-          <FeedIcon />
-          <span>Blog</span>
-        </NavLink>
-      </li>
-      <li>
-        <NavLink href="/about">
-          <InfoIcon />
-          <span>About</span>
-        </NavLink>
-      </li>
+      {
+        NAVIGATION_DESTINATIONS.map(destination => (
+          <li>
+            <NavigationTab destination={destination} />
+          </li>
+        ))
+      }
     </ul>
   </nav>
   <div class="options">
@@ -84,10 +70,10 @@ interface Props {}
         <RssFeedIcon />
     </IconButton> -->
     <Search client:only="solid-js" transition:persist>
-      <!-- <SearchAnchor client:load /> -->
-      <IconButton variant="tonal">
+      <SearchAnchor client:load />
+      <!-- <IconButton variant="tonal">
         <SearchIcon width={24} height={24} />
-      </IconButton>
+      </IconButton> -->
     </Search>
     <!-- <ThemeSelect client:load /> -->
     <ThemeSelect client:only="solid-js" transition:persist />
